# winter-school-lectures

./: .gitignore  .pre-commit-config.yml  Justfile  README.md  pyproject.toml  requirements.txt  software-design-and-modularity.slides.html  testing-lint-ci.slides.html
.github/workflows/: ci.yml  docs.yml
notebooks/: software-design-and-modularity.ipynb  testing-lint-ci.ipynb
src/rescale/: __init__.py  rescale.py
tests/: conftest.py  test_rescale.py
